src/objects/ADvendio__PublisherPayoutCondition__c.object
<CustomObject>
    <description>This object stores the conditions relevant for the related publisher payout contract.</description>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the AdPrice which belongs to this publisher payout condition.</description>
        <inlineHelpText>Relation to the AdPrice which belongs to this publisher payout condition.</inlineHelpText>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Publisher Payout Conditions</relationshipLabel>
        <relationshipName>PublisherPayoutConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the AdType which belongs to this publisher payout condition.</description>
        <inlineHelpText>Relation to the AdType which belongs to this publisher payout condition.</inlineHelpText>
        <label>Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Publisher Payout Conditions</relationshipLabel>
        <relationshipName>PublisherPayoutConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaDifferentiation__c</fullName>
        <description>Please choose the appropriate Media Differentiation for this publisher payout condition. (Global Picklist)</description>
        <inlineHelpText>Please choose the appropriate Media Differentiation for this publisher payout condition.</inlineHelpText>
        <label>Media Differentiation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaDifferentiation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaSegment__c</fullName>
        <description>Please choose the appropriate Media Segment for this publisher payout condition. (Global Picklist)</description>
        <inlineHelpText>Please choose the appropriate Media Segment for this publisher payout condition.</inlineHelpText>
        <label>Media Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaSegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__MediaType__c</fullName>
        <description>Please choose the appropriate Media Type for this publisher payout condition. (Global Picklist)</description>
        <inlineHelpText>Please choose the appropriate Media Type for this publisher payout condition.</inlineHelpText>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__MediaType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the Placement which belongs to this publisher payout condition.</description>
        <inlineHelpText>Relation to the Placement which belongs to this publisher payout condition.</inlineHelpText>
        <label>Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Publisher Payout Conditions</relationshipLabel>
        <relationshipName>PublisherPayoutConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublisherPayoutContract__c</fullName>
        <description>Links the publisher payout conditions to the proper contract.</description>
        <inlineHelpText>Please link the publisher payout conditions to the proper contract.</inlineHelpText>
        <label>Publisher Payout Contract</label>
        <referenceTo>ADvendio__PublisherPayoutContract__c</referenceTo>
        <relationshipLabel>Publisher Payout Conditions</relationshipLabel>
        <relationshipName>PublisherPayoutConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to the Site which belongs to this publisher payout condition.</description>
        <inlineHelpText>Relation to the Site which belongs to this publisher payout condition.</inlineHelpText>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Publisher Payout Conditions</relationshipLabel>
        <relationshipName>PublisherPayoutConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publisher Payout Condition</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__PublisherPayoutContract__c</columns>
        <columns>ADvendio__MediaDifferentiation__c</columns>
        <columns>ADvendio__MediaSegment__c</columns>
        <columns>ADvendio__MediaType__c</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>ADvendio__Placement__c</columns>
        <columns>ADvendio__AdType__c</columns>
        <columns>ADvendio__AdPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Publisher Payout Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publisher Payout Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>